[package]
name = "rss_bundler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
reqwest = { version =  "0.11", features = ["blocking"]}
rss = { version = "2.0", default_features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strfmt = "0.1"
tiny_http = "0.12"
